# ZONOS2

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  constraints.txt  pyproject.toml  tts_ui.html
benchmark/: bench_simple.py
docs/: features.md  structures.md  tts_architecture.md
emotion_directions/: angry.npy  arousal.npy  calibration.json  happy.npy  manifest.json  sad.npy  surprised.npy  valence.npy
models/: quantize_fp8.py
python/zonos2/: core.py
python/zonos2/engine/: config.py  engine.py  graph.py
python/zonos2/layers/moe/fused_moe/: cutlass_fp8.py  fp8_utils.py  fused_moe_impl.py  layer.py
python/zonos2/message/: tts.py
python/zonos2/models/: config.py  zonos2.py
python/zonos2/scheduler/: scheduler.py
python/zonos2/server/: api_server.py  args.py  launch.py
python/zonos2/tokenizer/: server.py  vocoder.py
python/zonos2/tts/: audio.py  conditioning.py  emotion.py  llm.py  longform.py
scripts/: build_emotion_directions.py  calibrate_emotion_strength.py  calibrate_emotion_strength_clone.py  curate_emotion_pool.py  eval_emotion_control.py
tests/: test_fp8_experts_numeric.py  test_fp8_ppl_ratio.py  verify_fp8_e2e.py  verify_fp8_full.sh
tests/kernel/: test_comm.py  test_index.py  test_store.py  test_tensor.py
tests/misc/: test_emotion_directions.py  test_offline_parity.py  test_offline_parity_gpu.py  test_serialize.py  test_tts_cfg.py  test_tts_conditioning_tokens.py  test_tts_longform.py  test_tts_repetition_sampler.py  test_tts_sequence.py  test_tts_speaker_cache.py  test_tts_speaking_rate.py  test_tts_vocoder.py
