[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZONOS2"
version = "0.1.0"
description = "Inference code for the ZONOS2 TTS model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "msgpack",
    "sgl_kernel>=0.3.17.post1",
    "torch",
    "torchaudio==2.9.1",
    "descript-audio-codec==1.0.0",
    "transformers>=4.56.0,<=4.57.3",
    "huggingface_hub",
    "pyzmq",
    "uvicorn",
    "fastapi",
    "apache-tvm-ffi>=0.1.4",
    "nvidia-cutlass-dsl==4.3.1",
    "flashinfer-cubin==0.5.3",
    "flashinfer-python>=0.5.3",
    "flashinfer-jit-cache",
    "ninja>=1.13.0",
    "kernels>=0.12.1",
    # Vendored NeMo TTS text normalization (python/zonos2/vendor):
    # pynini matches WeTextProcessing's pin; sacremoses pulls regex/joblib/tqdm.
    # NOTE: the pt grammar miscompiles under pynini 2.1.5.
    "pynini==2.1.6",
    "sacremoses>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "ruff>=0.11.0",
    "matplotlib>=3.10.5",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"*" = ["csrc/**/*"]
# Vendored NeMo text-normalization grammars: the .tsv tables and .far caches.
"zonos2.vendor.nemo_text_processing" = ["**/*.tsv", "**/*.far"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = [
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=zonos2",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "gpu: test loads model weights and requires a GPU (set ZONOS2_TEST_MODEL to run)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
]
ignore_missing_imports = true

[tool.uv.sources]
flashinfer-jit-cache = { url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.5.3/flashinfer_jit_cache-0.5.3+cu128-cp39-abi3-manylinux_2_28_x86_64.whl" }
